[package]
name = "devtools"
version = "0.1.0"
edition = "2021"

[dependencies]
leptos = { version = "0.8", features = ["csr"] }
leptos_router = { version = "0.8" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
qrcodegen = "1.8"
sqlformat = "0.5"
serde_yaml = "0.9"
base64 = "0.22"
getrandom = { version = "0.4", features = ["wasm_js"] }
uuid = { version = "1.10", features = ["v4", "v7", "js"] }
wasm-bindgen = "0.2.125"
wasm-bindgen-futures = "0.4.75"
console_error_panic_hook = "0.1"
js-sys = "0.3.102"

[dependencies.web-sys]
version = "0.3.102"
features = [
  "Window",
  "Navigator",
  "Clipboard",
  "Storage",
  "Document",
  "HtmlElement",
  "HtmlTextAreaElement",
  "HtmlSelectElement",
  "MediaQueryList",
  "HtmlInputElement",
  "FileReader",
  "File",
  "FileList"
]

[profile.release]
opt-level = 'z'
lto = true
codegen-units = 1
panic = "abort"
